--- a/styles.css
+++ b/styles.css
@@ -193,3 +193,73 @@ p {
 .mini:active {
     transform: scale(0.96);
   }
+
+  /* Estilos base para todos los tamaños de pantalla */
+.techs {
+    text-align: center;
+    margin-top: 20px;
+}
+
+/* Estilos para dispositivos móviles con pantallas de hasta 767px de ancho */
+@media (max-width: 767px) {
+    .techs a {
+        display: block;
+        margin: 10px auto;
+        text-decoration: none;
+        text-align: center;
+        width: 80%; /* Ancho del contenedor de cada ícono y texto */
+    }
+
+    /* Ajustar el tamaño de las imágenes en dispositivos móviles */
+    .techs img {
+        width: 40px;
+        height: 40px;
+        display: block;
+        margin: 0 auto 5px; /* Espacio entre imagen y texto */
+    }
+}
+
+/* Estilos para pantallas de escritorio */
+.techs a {
+    display: inline-block; /* Convertir los enlaces en bloques para que el texto aparezca debajo */
+    margin: 10px;
+    text-decoration: none;
+    text-align: center;
+    width: 100px; /* Ancho del contenedor de cada ícono y texto */
+}
+
+/* Ajustar el tamaño de las imágenes en pantallas de escritorio */
+.techs img {
+    width: 50px; /* Ancho de la imagen */
+    height: 50px; /* Alto de la imagen */
+    display: block; /* Convertir las imágenes en bloques para que se muestren en línea */
+    margin: 0 auto 5px; /* Centrar las imágenes horizontalmente */
+}
+
+.techsquare {
+    background-color: #eeeeee; /* Color de fondo de la burbuja */
+    padding: 25px;
+    height: 130px;
+    width: 120px;
+    margin: 5px; /* Margen entre los elementos */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.8); /* Agregar sombra */
+}
+
+.techsquare:hover {
+    transform: scale(1.05); /* Hace que la burbuja se haga ligeramente grande */
+    background-color: #e4f8f6; /* Cambia el color de fondo al pasar el cursor */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 1); /* Aumenta la sombra al pasar el cursor */
+}
+
+.techs {
+    display: flex; /* Mostrar los elementos en una fila */
+    flex-wrap: wrap; /* Permite que los elementos se coloquen en múltiples líneas */
+    justify-content: center; /* Centra los elementos horizontalmente */
+}
+
+/* Estilo para el texto dentro de la techsquare */
+.techsquare span {
+    display: block; /* Asegura que el texto se muestre en una línea debajo del ícono */
+    text-align: center; /* Centra el texto dentro de la techsquare */
+    margin-top: 10px; /* Espacio entre el ícono y el texto */
+}
