--- a/styles.css
+++ b/styles.css
@@ -257,3 +257,32 @@ p {
     text-align: center; /* Centra el texto dentro de la techsquare */
     margin-top: 10px; /* Espacio entre el ícono y el texto */
 }
+
+/*Profesional Education
+
+/* Ajustar el tamaño y la simetría de las imágenes Profesional Education */
+.shield {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .shield_box {
+    flex: 1;
+    text-align: center;
+  }
+  
+  .shield_box_img img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+  }
+  
+  .shield_box_title {
+    font-weight: bold;
+  }
+  
+  .shield_box_subtitle {
+    font-style: italic;
+  }
