fix(profesional_edu):a correct size for shield boxes

--- a/styles.css
+++ b/styles.css
@@ -249,27 +249,31 @@ p {
 }
 
 /*Profesional Education
-
 /* Estilos para el contenedor de educación (shield) */
+
+.main_shield {
+    display: flex;
+    justify-content: center;
+    width: auto; /* Ajuste automático al contenido */
+  }
+
 .shield {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
   }
   
   /* Estilos para cada caja de educación (shield_box) */
   .shield_box {
     background-color: #f1f1f1;
-    padding: 15px;
-    width: 200px;
+    padding: 20px;
     margin: 10px;
     text-align: center;
   }
   
   /* Estilos para las imágenes dentro de shield_box */
   .shield_box img {
-    width: 80px;
-    height: 80px;
+    width: 160px;
+    height: 160px;
     border-radius: 50%;
     margin-bottom: 10px;
   }
@@ -277,11 +281,11 @@ p {
   /* Estilos para el título dentro de shield_box */
   .shield_box_title {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 30px;
   }
   
   /* Estilos para el subtítulo dentro de shield_box */
   .shield_box span {
     display: block;
-    font-size: 14px;
+    font-size: 20px;
   }
