--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@
   display: flex;
   justify-content: center;
   width: 100%; /* Ajustar el ancho al 100% del contenedor */
-  flex-wrap: wrap; /* Permite que los elementos se ajusten en varias filas */
+  flex-wrap: wrap;
+  overflow-x: hidden;
 }
 .main_projects{
   display: flex;
