--- a/styles.css
+++ b/styles.css
@@ -394,3 +394,34 @@ p {
   margin: 10px auto; /* Centrar la imagen y agregar margen */
   display: block; /* Hace que la imagen sea un bloque para poder centrarla */
 }
+
+  /*More Projects
+/* Estilos para la tabla de more projects */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+/* Estilos para las celdas de la tabla */
+td {
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+/* Estilos para las celdas de la primera columna */
+td:first-child {
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+/* Estilos para los enlaces */
+a {
+  color: #3498db;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+a:hover {
+  color: #e74c3c;
+}
